--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,7 +2,8 @@
 $body-bg: #f8fafc;
 
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
+$font-family-sans-serif: "Nunito", sans-serif;
+$font-open-sans: "open-sans-fonts/open-sans.scss";
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
